tests/lean/inductive1.lean.expected.out
inductive1.lean:4:15: error: invalid inductive type, resultant type is not a sort
inductive1.lean:12:0: error: invalid mutually inductive types, resulting universe mismatch, given 
  Type
expected type
  Prop
inductive1.lean:22:0: error: invalid mutually inductive types, resulting universe mismatch, given 
  Type v
expected type
  Type u
inductive1.lean:31:0: error: invalid mutually inductive types, type mismatch at parameter 'x'
  Bool
expected type
  Nat
inductive1.lean:40:0: error: invalid inductive type, number of parameters mismatch in mutually inductive datatypes
inductive1.lean:49:0: error: invalid mutually inductive types, binder annotation mismatch at parameter 'x'
inductive1.lean:59:0: error: invalid inductive type, universe parameters mismatch in mutually inductive datatypes
inductive1.lean:69:2: error: 'Boo.T1.bla' has already been declared
inductive1.lean:73:10: error: 'Boo.T1' has already been declared
inductive1.lean:80:0: error: invalid use of 'partial' in inductive declaration
inductive1.lean:81:0: error: invalid use of 'noncomputable' in inductive declaration
inductive1.lean:82:0: error: invalid use of attributes in inductive declaration
inductive1.lean:85:0: error: invalid 'private' constructor in a 'private' inductive datatype
inductive1.lean:93:7: error: invalid inductive type, cannot mix unsafe and safe declarations in a mutually inductive datatypes
inductive1.lean:100:0: error: constructor resulting type must be specified in inductive family declaration
inductive1.lean:105:0: error: unexpected constructor resulting type, type expected
  T1
inductive1.lean:108:0: error: unexpected constructor resulting type
  Nat
inductive1.lean:118:7: error: unknown identifier 'cons'
(sorryAx ?m) : ?m
